syntax = "proto3";

package example;
option go_package = "go;proto";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string name = 1;
  int32 age = 2;
}

message GetUsersResponse {
  repeated GetUserResponse users = 1;
}

message PostUserRequest {
  string name = 1 [(validate.rules).string = {
    min_len: 1,
    max_len: 30,
    pattern: "^[a-zA-Z0-9\\s]+$"
  }];
  int32 age = 2 [(validate.rules).int32.gt = 0];
}

message PostUsersRequest {
  repeated PostUserRequest users = 1;
}

message PutUserRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

message SimpleApiResponse {
  int32 status = 1;
}

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse);
  rpc PostUsers (PostUsersRequest) returns (SimpleApiResponse);
}

// service GetUsersService {
//   rpc GetUser (GetUserRequest) returns (GetUserResponse) {
//     option (google.api.http) = {
//       get: "/v1/user/{id}"
//     };
//   }

//   rpc GetUsers (google.protobuf.Empty) returns (GetUsersResponse) {
//     option (google.api.http) = {
//       get: "/v1/users"
//     };
//   }

//   rpc PostUser (PostUserRequest) returns (SimpleApiResponse) {
//     option (google.api.http) = {
//       post: "/v1/users"
//       body: "*"
//     };
//   }

//   rpc PutUser (PutUserRequest) returns (SimpleApiResponse) {
//     option (google.api.http) = {
//       put: "/v1/users/{id}"
//       body: "*"
//     };
//   }
// }
